# libjs-bindings

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
examples/: Core.File.js  GUI.Notification.js  GUI.Window.js  argc-argv.js
patches/: jsb.patch
src/: Forward.h
src/Bindings/: GlobalObject.cpp  GlobalObject.h  Macros.h
src/Bindings/LibCore/: File.cpp  File.h
src/Bindings/LibGUI/: Application.cpp  Application.h  Notification.cpp  Notification.h  Window.cpp  Window.h
